增加消息队列代码

--- a/src/main/java/basic_db/description
+++ b/src/main/java/basic_db/description
@@ -16,4 +16,5 @@
     5）新建对象时，若元数据若存在，需要加载到内存，否则在内存新建一份元信息。更新元数据时，不立即更新到文件
        调用flush()方法时才更新到文件。
     6）删除键值对不删除.data文件中的信息，删除索引中信息并将pos保存到空白信息中，便于下次重用。
+    7）暂不考虑并发引起的一致性问题。
 
